# genomics-skills

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: integration-guide.md  skill-authoring-guide.md
skills/go-enrichment/: SKILL.md  requirements.txt
skills/go-enrichment/scripts/: go_enrichment.py
skills/plot-volcano/: SKILL.md  requirements.txt
skills/plot-volcano/scripts/: plot_volcano.py
skills/protein-structure-viewer/: SKILL.md  requirements.txt
skills/protein-structure-viewer/scripts/: protein_structure_viewer.py
skills/protein-variant-mapper/: SKILL.md  requirements.txt
skills/protein-variant-mapper/scripts/: protein_variant_mapper.py
skills/pubmed-search/: SKILL.md  requirements.txt
skills/pubmed-search/scripts/: pubmed_search.py
skills/survival-analysis/: SKILL.md  requirements.txt
skills/survival-analysis/scripts/: survival_analysis.py
skills/tcga-expression/: SKILL.md  requirements.txt
skills/tcga-expression/scripts/: tcga_expression.py
skills/variant-context/: SKILL.md  requirements.txt
skills/variant-context/scripts/: variant_context.py
src/genomics_skills/: __init__.py  cli.py  runner.py
tests/: test_runner.py  test_skills_smoke.py
