[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genomics-skills"
version = "0.1.0"
description = "A modular, agent-friendly genomics skill library — 8 pure-Python skills spanning variant context, protein structure, expression, survival, and literature, with SKILL.md contracts compatible with bioinfor-claw, OpenClaw, and Claude Code."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Ankur Sharma", email = "learning.ankur.ai@gmail.com" },
]
keywords = [
    "genomics",
    "bioinformatics",
    "agentic-ai",
    "skills",
    "variant-interpretation",
    "tcga",
    "protein-structure",
    "survival-analysis",
    "gene-expression",
    "pubmed",
    "crispr",
    "bioinfor-claw",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime: only what every skill runner needs
dependencies = [
    "requests>=2.32",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Install per-skill groups individually to avoid pulling everything
variant-context = [
    "biopython>=1.83",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]
protein-structure = [
    "biopython>=1.83",
    "matplotlib>=3.9",
    "py3Dmol>=2.1",           # 3-D viewer (requires Jupyter for inline render)
    "scipy>=1.13",
]
expression = [
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.13",
]
survival = [
    "lifelines>=0.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]
gene-list = [
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.13",
    "networkx>=3.3",
    "matplotlib-venn>=0.11",
]
literature = []              # uses only requests + stdlib
plot = [
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.13",
    "adjustText>=1.2",
]
all = [
    "genomics-skills[variant-context,protein-structure,expression,survival,gene-list,literature,plot]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
genomics-skill = "genomics_skills.cli:app"

[project.urls]
Homepage       = "https://github.com/ankurgenomics/genomics-skills"
Repository     = "https://github.com/ankurgenomics/genomics-skills"
"Bug Tracker"  = "https://github.com/ankurgenomics/genomics-skills/issues"
"agentic-genomics" = "https://github.com/ankurgenomics/agentic-genomics"

[tool.hatch.build.targets.wheel]
packages = ["src/genomics_skills"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
